solc_ossfuzz_seed_corpus/test_sol/test_a3941ba7f5ee5d4e987bbef610da9bc198eb005adb761e728661cf0ee2d6a477_472d23082d0a29590371ec70d67d59392d393d85_sol.sol
==== Source:  ====

==== Source: su0.sol ====
function f0(bytes3 i0,int32 i1)      returns(bool o0,bool o1,bool o2){
}
struct St0 {
  bool el0;
  function (address payable) external   returns (bool, uint240) el1;
  function () external   returns (bool, function (int16, bytes memory) external   returns (address payable), int128[] memory) el2;
}
pragma solidity >= 0.0.0;

==== Source: su1.sol ====
contract C0 {
  event ev0();
  function f1(bytes9 i0) external virtual    returns(address o0)  {
    revert(string("This is a really long string that must ideally be random but is currently hard coded"));
  }
  bytes18  public s0;
  uint104  public s1;
  int176  public s2;
  mapping(uint168 => bytes21)  public s3;
  constructor(bytes18 i0,uint104 i1,int176 i2)   {
    s0 |= (false ? bytes16(0xffffffffffffffffffffffffffffffff) : (false ? bytes18(0x8983a10cfd60c370c73fdb95462431c4c5e2) : bytes18(0x000000000000000000000000000000000000)));
    s1 -= (uint104(((uint104(0) * ((uint104(0) | uint104(0)) ^ uint104(5167014603917051695973538707412))) / uint104(20282409603651670423947251286015))) % uint104(15454184507281710011554111055324));
    s2 %= (int176(12891435307020440403860858172062465524476806556013189) * (int176(((int176(47890485652059026823698344598447161988085597568237567) | int176(47890485652059026823698344598447161988085597568237567)) / int176(47890485652059026823698344598447161988085597568237567))) ^ int176(47890485652059026823698344598447161988085597568237567)));
    s3[uint168(254460009417525345280442251924300203712970277455939)] |= bytes21(0xffffffffffffffffffffffffffffffffffffffffff);
    unchecked {
    }
  }
  receive() external virtual  payable
  {
  }
  function f3(int176 i0,int176 i1) external      {
  }
}
pragma solidity >= 0.0.0;
function f4(int80 i0)    pure suffix returns(function () external   returns (bytes30, address, uint248[] memory) o0){
  while (false)
  {
    function (function () internal  ) internal   l0;
    try o0() returns (bytes30 l1, address l2, uint248[] memory l3)
    {
      try o0() returns (bytes30 l4, address l5, uint248[] memory l6)
      {
        return (o0);
      }
      catch
      {
        if (i0 > int16(32767))
        {
          for(uint solinit0 = 0; solinit0 < ((~(uint256(0))) % 11); solinit0++)
          {
            continue;
          }
        }
        else
        {
          do
          {
            bytes("75a57977653a431e8f4c68bc690000000000");
          }
          while ((true ? (0 f5 /*suffix expr*/ >= address(0x0000000000000000000000000000000000000008)) : false));
          continue;
        }
        return (o0);
      }
      catch Panic(uint256 l7)
      {
        continue;
      }
    }
    catch
    {
    }
    catch Panic(uint256 l8)
    {
    }
  }
}
error er0();
function f5(int120 i0) pure suffix  returns(address o0)
{
}
// ----
// Warning 5667: (su1.sol:43-52): Unused function parameter. Remove or comment out the variable name to silence this warning.
// Warning 5667: (su1.sol:82-92): Unused function parameter. Remove or comment out the variable name to silence this warning.
// Warning 5667: (su1.sol:330-340): Unused function parameter. Remove or comment out the variable name to silence this warning.
// Warning 5667: (su1.sol:341-351): Unused function parameter. Remove or comment out the variable name to silence this warning.
// Warning 5667: (su1.sol:352-361): Unused function parameter. Remove or comment out the variable name to silence this warning.
// Warning 6133: (su1.sol:1994-2039): Statement has no effect.
// Warning 2072: (su1.sol:1509-1556): Unused local variable.
// Warning 5667: (su1.sol:1580-1590): Unused try/catch parameter. Remove or comment out the variable name to silence this warning.
// Warning 5667: (su1.sol:1592-1602): Unused try/catch parameter. Remove or comment out the variable name to silence this warning.
// Warning 5667: (su1.sol:1604-1623): Unused try/catch parameter. Remove or comment out the variable name to silence this warning.
// Warning 5667: (su1.sol:1655-1665): Unused try/catch parameter. Remove or comment out the variable name to silence this warning.
// Warning 5667: (su1.sol:1667-1677): Unused try/catch parameter. Remove or comment out the variable name to silence this warning.
// Warning 5667: (su1.sol:1679-1698): Unused try/catch parameter. Remove or comment out the variable name to silence this warning.
// Warning 5667: (su1.sol:2244-2254): Unused try/catch parameter. Remove or comment out the variable name to silence this warning.
// Warning 5667: (su1.sol:2334-2344): Unused try/catch parameter. Remove or comment out the variable name to silence this warning.
// TypeError 8961: (su1.sol:1566-1570): Function cannot be declared as pure because this expression (potentially) modifies the state.
// TypeError 8961: (su1.sol:1641-1645): Function cannot be declared as pure because this expression (potentially) modifies the state.
